Added an EJB remote call implementation for the jbilling client API